# function

./: .gitignore  CMakeLists.txt  main.cpp
src/exceptions/: exception.cpp  exception.h  unexpectedsymbolexception.cpp  unexpectedsymbolexception.h  unexpectedtokenexception.cpp  unexpectedtokenexception.h
src/function/: function.cpp  function.h  functionbuilder.cpp  functionbuilder.h  functionparser.cpp  functionparser.h  token.cpp  token.h
src/node/: arithmeticnode.cpp  arithmeticnode.h  functionnode.cpp  functionnode.h  namenode.cpp  namenode.h  numbernode.cpp  numbernode.h  switchsignnode.cpp  switchsignnode.h  variablenode.cpp  variablenode.h
